Fix dark mode mobile subtitle

--- a/mobile.css
+++ b/mobile.css
@@ -15,4 +15,8 @@
   .subtitle {
     display: none;
   }
+
+  body.dark .subtitle {
+    display: none;
+  }
 }
